# gptfunction

./: LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/gpt_function/: GPTFunction.py
src/gptfunction/: GPTFunction.py  __init__.py
test/: __init__.py  test_gpt_function.py
