[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ "name" = "PandasAreBears" }]
name = "gptfunction"
readme = { file = "README.md", content-type = "text/markdown" }
version = "0.1.3"
description = "A decorator for wrapping Python functions to generate an OpenAI GPT function calling schema."
dependencies = ["docstring_parser"]
license = { file = "LICENSE.md" }
requires-python = ">= 3.5"
keywords = ["openai", "gpt", "function calling"]
urls.Homepage = "https://github.com/PandasAreBears/gpt_function"
